create index.html for my project

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Another crappy site never to be published by yours truly T.G.S
 </p>
 <p id="demo">
   <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">
-Click me right now for a good succ.</button>
+Click me right now for a good succ ;) .</button>
 </p>
 </body>
 </html>
