--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ Another crappy site never to be published by yours truly T.G.S
 <p id="demo">
   <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">
 Click me right now for a good succ ;) .</button>
+  <br>
+  click that for a good succ ;0
 </p>
 </body>
 </html>
