--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Another crappy site never to be published by yours truly T.G.S
   <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">
 Click me right now for a good succ ;) .</button>
   <br>
-  click that for a good succ ;0
+  Who wants 10$?
 </p>
 </body>
 </html>
